--- a/updateServer.yml
+++ b/updateServer.yml
@@ -1,22 +1,35 @@
 ---
-  - name: "check if the apache is running and installed"
-    hosts: linux
-    become: true
-    become_user: root
-    vars_files:
-      - vault.yml
-    tasks:
+- name: Update and upgrade the server
+  hosts: linux
+  become: true
+  become_user: root
+  vars_files:
+    - vault.yml
+  tasks:
 
     - name: Update apt package cache
       apt:
         update_cache: yes
 
-    - name: Install Apache
+    - name: Upgrade all packages to latest version
       apt:
-        name: apache2
-        state: present
+        upgrade: dist
+        autoremove: yes
 
-    - name: Start Apache service
-      service:
-        name: apache2
-        state: started
+    - name: Clean up cached package files
+      apt:
+        autoclean: yes
+        autoremove: yes
+
+    - name: Check for pending updates
+      command: apt list --upgradable
+      register: upgradable_packages
+      changed_when: false
+      tags:
+        - Display
+        
+    - name: Display upgradable packages
+      debug:
+        msg: "{{ upgradable_packages.stdout }}"
+      tags:
+        - Display
