--- a/roles/updateServer/tasks/main.yml
+++ b/roles/updateServer/tasks/main.yml
@@ -1,4 +1,3 @@
----
 - name: Update apt package cache
   apt:
     update_cache: yes
@@ -21,13 +20,21 @@
     - Display
 
 - name: Check if a reboot is needed for servers
-  register: reboot_required_file
   stat:
-      path: /var/run/reboot-required 
-      get_checksum: no
-        
+    path: /var/run/reboot-required
+  register: reboot_required_file
+  changed_when: false
+
 - name: Display upgradable packages
   debug:
     msg: "{{ upgradable_packages.stdout }}"
   tags:
     - Display
+
+- name: Reboot the server if needed with a timeout
+  reboot:
+    msg: "Reboot initiated by Ansible because a reboot is required after updates."
+    reboot_timeout: 600   # Timeout van 10 minuten (600 seconden)
+    pre_reboot_delay: 0   # Geen vertraging voor de reboot
+    post_reboot_delay: 30 # Wacht 30 seconden na de reboot voordat verder wordt gegaan
+  when: reboot_required_file.stat.exists
