--- a/inventory.ini
+++ b/inventory.ini
@@ -1,3 +1,5 @@
 [linux]
 BP-LX-WEB-01 ansible_host=172.16.2.21 ansible_user=student ansible_ssh_pass=BrownGreen78!
 BP-LX-WEB-02 ansible_host=172.16.2.22 ansible_user=student ansible_ssh_pass=BrownGreen78!
+
+[deployed_vms]
