--- a/main/inventory.ini
+++ b/main/inventory.ini
@@ -1,5 +1,5 @@
 [linux]
-BP-LX-WEB-01 ansible_host=172.16.2.21 ansible_user=student ansible_ssh_pass=BrownGreen78!
-BP-LX-WEB-02 ansible_host=172.16.2.22 ansible_user=student ansible_ssh_pass=BrownGreen78!
+SRV-WEB-01 ansible_host=172.16.10.21 ansible_user=student ansible_ssh_pass=BrownGreen78!
+SRV-WEB-02 ansible_host=172.16.10.22 ansible_user=student ansible_ssh_pass=BrownGreen78!
 
 [deployed_vms]
