--- a/test/inventory.ini
+++ b/test/inventory.ini
@@ -1,5 +1,11 @@
+[deployed_vms]
+
+[checkmk_server]
+BP-LX-MON-01 ansible_host=172.16.2.12 ansible_user=student ansible_ssh_pass=BrownGreen78!
+
 [linux]
 BP-LX-WEB-01 ansible_host=172.16.2.21 ansible_user=student ansible_ssh_pass=BrownGreen78!
 BP-LX-WEB-02 ansible_host=172.16.2.22 ansible_user=student ansible_ssh_pass=BrownGreen78!
-
-[deployed_vms]
+BP-test-webv114 ansible_host=172.16.2.114 ansible_user=student ansible_ssh_pass=BrownGreen78!
+BP-test-webv116 ansible_host=172.16.2.116 ansible_user=student ansible_ssh_pass=BrownGreen78!
+BP-test-webv117 ansible_host=172.16.2.117 ansible_user=student ansible_ssh_pass=BrownGreen78!
